# emannlib

./: .gitignore  CMakeLists.txt  Make VS12 Project Files.bat  Make XCode Project Files.sh  README.md
assets/: 2dDrawing.frag  2dDrawing.vert
include/emannlib/: Area.hpp  AutoProfile.hpp  OpenGLStateMachine.hpp  Rect.hpp  ResourceManager.hpp  Shader.hpp  Singleton.hpp  Vector.hpp
old files/: GLDraw.cpp  OpenGLStateMachine.hpp
src/: CMakeLists.txt
src/emannlib-common/: AutoProfile.cpp  AutoProfile.hpp  CMakeLists.txt  Color.hpp  Rect.hpp  RunTime.hpp  Singleton.hpp  Time.hpp  Vector.hpp  test.cpp
src/emannlib-ecs/: CMakeLists.txt  Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  Entity_Imp.hpp  Event.cpp  Event.hpp  System.cpp  System.hpp
src/emannlib-filesystem/: CMakeLists.txt  FileSystemAccess.cpp  FileSystemAccess.hpp  Path.cpp  Path.hpp  ResourceManager.hpp
src/emannlib-graphics/: Bitmap.cpp  Bitmap.hpp  CMakeLists.txt  Font.cpp  Font.hpp  GLDraw.cpp  GLDraw.hpp  OpenGL.hpp  OpenGLStateMachine.cpp  OpenGLStateMachine.hpp  OpenGLWindow.cpp  OpenGLWindow.h  OpenGLWindow.hpp  RenderableObject.cpp  RenderableObject.hpp  Shader.cpp  Shader.hpp  Shader_Imp.hpp  Shape.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  stb_image.c  stb_image.h  stb_image_write.c  stb_image_write.h
src/emannlib-math/: CMakeLists.txt  Easing.cpp  Easing.hpp  Math.cpp  Math.hpp  Vector.cpp  Vector2.hpp
src/emannlib-process/: CMakeLists.txt  test.cpp
src/emannlib-utility/: Assert.cpp  Assert.hpp  AutoProfile.cpp  AutoProfile.hpp  CMakeLists.txt  RunTime.cpp  RunTime.hpp  Singleton.hpp  Task.cpp  Task.hpp  Time.hpp
test/: CMakeLists.txt  test.cpp
test/RawTests/: CMakeLists.txt  RawTests.cpp
test/TestBasicDrawing/: BasicDrawingTest.cpp  CMakeLists.txt
test/UnitTests/: CMakeLists.txt  test.cpp
